[package]
name = "subvisor"
version = "0.1.0"
authors = ["Joshua Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = { version = "^0.12.1", default-features = false }
libc = "0.2.69"
log = "0.4.0"
nix = "0.17.0"

[dev-dependencies]
env_logger = "0.7.1"
